# Citadel-Local

./: .citadel-local.example.yaml  .gitignore  .redteam-local.example.yaml  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CI-CD.md  CONFIGURATION.md  CONTRIBUTING.md  PRD.md  PROMPTS.md  SCHEMA.md  SECURITY.md  TROUBLESHOOTING.md
examples/: sample_findings.json
rules/: insecure_patterns.yaml  secrets_regex.yaml
src/citadel_local/: cli.py  config.py
src/citadel_local/llm/: ollama_client.py  prompts.py
src/citadel_local/repo_scan/: git_diff.py
src/citadel_local/reporting/: report_json.py  report_md.py
src/redteam_local/: cli.py
src/redteam_local/detectors/: __init__.py  crypto.py  injections.py  secrets.py
src/redteam_local/llm/: council.py
src/redteam_local/repo_scan/: file_walk.py  inventory.py
src/redteam_local/reporting/: report_md.py
tests/: test_crypto.py  test_git_diff.py  test_injections.py  test_run_detectors.py  test_secrets.py
